[gd_scene load_steps=3 format=2]

[ext_resource path="res://img/menu/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://gui/temple_of_time_theme.tres" type="Theme" id=2]

[node name="OptionsMenu" type="CenterContainer"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 162.0
margin_bottom = 82.0
custom_constants/separation = 16

[node name="Hour24Button" type="Button" parent="VBoxContainer"]
margin_right = 162.0
margin_bottom = 33.0
size_flags_horizontal = 4
toggle_mode = true
text = "12-Hour Clock"

[node name="ReturnButton" type="Button" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 162.0
margin_bottom = 82.0
text = "Return"
[connection signal="toggled" from="VBoxContainer/Hour24Button" to="." method="toggle_hour_24"]
[connection signal="pressed" from="VBoxContainer/ReturnButton" to="." method="hide_self"]
